--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     ],
     "resources": [
         "catalog",
-        "stream",
-        "meta"
+        "stream"
     ],
     "catalogs": [
         {
